fix(material/icon): added styling for icon to ignore text-spacing
Updates previous fix to target  instances where its
parent element has  or  applied to
it and to override any , , or
 changes to the  so it should stay the same.

Fixes b/250063405

--- a/src/material/icon/icon.scss
+++ b/src/material/icon/icon.scss
@@ -45,6 +45,13 @@ mat-icon {
   }
 }
 
+.mat-icon:has(div[style*="letter-spacing:"]):has(div[style*="word-spacing:"]) {
+  /* Apply styles to avoid text spacing */
+  letter-spacing: 0 !important;
+  word-spacing: 0 !important;
+  line-height: 1 !important;
+}
+
 // Icons that will be mirrored in RTL.
 [dir='rtl'] .mat-icon-rtl-mirror {
   transform: scale(-1, 1);
